crates/vexor-compiler/tests/golden/error/output/match_missing_arrow.err
parse error at line 4, column 9
  |
4 |     100 Circle(100)
  |         ^
invalid match arm
expected `=>`